--- a/flask/app/templates/result.html
+++ b/flask/app/templates/result.html
@@ -1,14 +1,16 @@
 {% extends 'user.html' %}
 
+
 {% block list_users %}
 <table border=1>
-    {% if names_user %}
-    {% for key, value in names_user.items() %}
-    <tr>
-        <th>{{ key }}</th>
-        <td>{{ value }}</td>
-    </tr>
-    {% endfor %}
-    {% endif %}
+    <thead>
+        <tr>
+            <td>Name</td>
+            <td>Age</td>
+            <td>Color</td>
+        </tr>
+    </thead>
 </table>
 {% endblock %}
+{% if names_user %}
+{% endif %}
