The app run with docker compose, the connection with databasase mysql work and initialize for itself---- try to run on docker with virtualenv is a good practice??--- try to create model and work with classes to build a better app(maybe arbnb)

--- a/flask/app/templates/user.html
+++ b/flask/app/templates/user.html
@@ -12,7 +12,7 @@ User
         <h2>Hello there {{user_ip}}</h2>
     </article>
 </section>
-<table border=1>
+<table border=1 style="background-color:red">
     <thead>
         <tr>
             <td>Name</td>
