Updating the templates
Customize the user page:
- Try to do a beutifull page
- The glasg {block} is necesary

--- a/flask/app/templates/user.html
+++ b/flask/app/templates/user.html
@@ -12,10 +12,10 @@ User
         <h2>Hello there {{user_ip}}</h2>
     </article>
 </section>
-<table border=1 style="background-color:red">
+<table border=1 style="background-color:aqua">
     <thead>
         <tr>
-            <td>Name</td>
+            <td>Names</td>
             <td>Age</td>
             <td>Color</td>
             <td>Options</td>
